# asset-pipeline

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  env.example  package.json  pipeline.config.toml  pnpm-lock.yaml  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/asset_api/: main.py
apps/cli/: pyproject.toml
apps/cli/src/asset_cli/: main.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/sku/[sku]/: page.tsx
apps/web/lib/: api.ts
scripts/: test_image_models.py  test_replicate.py
