[project]
name = "asset-cli"
version = "0.1.0"
description = "CLI for the asset optimization pipeline"
requires-python = ">=3.12"
dependencies = [
    "asset-sdk",
    "typer[all]>=0.12",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asset_cli"]

[project.scripts]
asset = "asset_cli.main:app"
